Container/Kubernetes/k3s-soniiit/Zabbix/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: zabbix
  namespace: zabbix
  annotations: 
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`zabbix.home.soniiit.net`)
      kind: Rule
      services:
        - name: zabbix-web
          port: 80
  tls:
    secretName: zabbix-soniiit-net-selfsigned-tls
